--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,5 @@
-<p>home works!</p>
-
-  <!-- Terminal -->
+<!-- 
+  Terminal
   <div class="terminal" >
     <pre >ng generate component xyz</pre>
     <pre >ng add @angular/material</pre>
@@ -8,5 +7,7 @@
     <pre >ng add _____</pre>
     <pre>ng test</pre>
     <pre >ng build</pre>
-</div>
+</div> -->
+
+<!-- <json-editor  [options]="editorOptions" [data]="data"></json-editor> -->
 
