--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "~jsoneditor/dist/jsoneditor.min.css";
+
+.ace_editor.ace-jsoneditor {
+  min-height: 500px;
+}
+
 
 .terminal {
     position: relative;
@@ -45,3 +51,106 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
       visibility: hidden;
     }
   }
+
+
+
+
+  
+  .coming-soon-h1{
+    color:#142833;
+  }
+  
+  .coming-soon{
+    width:100vw;
+    height:75vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left:6vmin;
+    text-align: center;
+    position: relative;
+    left:-10vmin;
+    margin-top: 10px !important;
+    font-size:10vmin !important;
+  }
+
+  div.jsoneditor,
+div.jsoneditor-menu {
+  border-color: #3F519D;;
+}
+div.jsoneditor-menu {
+  background-color: #3F519D;;
+}
+
+.jsoneditor-menu a.jsoneditor-poweredBy{
+  visibility: hidden !important;
+}
+/* div.jsoneditor-tree,
+div.jsoneditor textarea.jsoneditor-text {
+  background-color: #666666;
+  color: #ffffff;
+}
+div.jsoneditor-field,
+div.jsoneditor-value {
+  color: #ffffff;
+}
+table.jsoneditor-search div.jsoneditor-frame {
+  background: #808080;
+}
+
+tr.jsoneditor-highlight,
+tr.jsoneditor-selected {
+  background-color: #808080;
+}
+
+div.jsoneditor-field[contenteditable=true]:focus,
+div.jsoneditor-field[contenteditable=true]:hover,
+div.jsoneditor-value[contenteditable=true]:focus,
+div.jsoneditor-value[contenteditable=true]:hover,
+div.jsoneditor-field.jsoneditor-highlight,
+div.jsoneditor-value.jsoneditor-highlight {
+  background-color: #808080;
+  border-color: #808080;
+}
+
+div.jsoneditor-field.highlight-active,
+div.jsoneditor-field.highlight-active:focus,
+div.jsoneditor-field.highlight-active:hover,
+div.jsoneditor-value.highlight-active,
+div.jsoneditor-value.highlight-active:focus,
+div.jsoneditor-value.highlight-active:hover {
+  background-color: #b1b1b1;
+  border-color: #b1b1b1;
+}
+
+div.jsoneditor-tree button:focus {
+  background-color: #868686;
+}
+
+
+div.jsoneditor-readonly {
+  color: #acacac;
+}
+div.jsoneditor td.jsoneditor-separator {
+  color: #acacac;
+}
+div.jsoneditor-value.jsoneditor-string {
+  color: #00ff88;
+}
+div.jsoneditor-value.jsoneditor-object,
+div.jsoneditor-value.jsoneditor-array {
+  color: #bababa;
+}
+div.jsoneditor-value.jsoneditor-number {
+  color: #3f51b5;
+}
+div.jsoneditor-value.jsoneditor-boolean {
+  color: #ff8048;
+}
+div.jsoneditor-value.jsoneditor-null {
+  color: #49a7fc;
+}
+div.jsoneditor-value.jsoneditor-invalid {
+  color: white;
+} */
