get service and componen upload changes

--- a/src/app/get/get.component.html
+++ b/src/app/get/get.component.html
@@ -1,1 +1,4 @@
 <json-editor  [options]="editorOptions" [data]="data"></json-editor>
+<div class="example-button-row">
+<button mat-raised-button color="primary" style="float: right;margin-right: 20px;margin-top:20px;width: 250px;" (click)="submit()" [disabled]="!isJsonValid">Upload</button>
+</div>
