--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,41 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <button mat-icon-button>
-        <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+  <div class="example-container" [class.example-is-mobile]="mobileQuery.matches" >
+    <mat-toolbar color="primary" class="example-toolbar">
+        <mat-toolbar-row>
+      <button mat-icon-button (click)="snav.toggle()" *ngIf="mobileQuery.matches ? 56 : 0" >
+        <mat-icon >menu</mat-icon>
       </button>
-      <h1>My JSON</h1>
-      <span class="menu-spacer"></span>
-      <div>
-        <a mat-button (click)="displayDescription('get')" [routerLink]="'/get'" > GET </a>
-        <a mat-button (click)="displayDescription('post')" [routerLink]="'/post'"> POST </a>
-        <a mat-button (click)="displayDescription('put')" [routerLink]="'/put'"> PUT </a>
-        <a mat-button (click)="displayDescription('delete')" [routerLink]="'/delete'"> DELETE </a>  
-      </div>
+      <span><img src="../assets/images/logo-white.png"  style="width:130px;margin-top:8px"/></span>
+     <span class="menu-spacer"></span>
+      <div *ngIf="!mobileQuery.matches ? 56 : 0" style="margin-left: 35px;">
+        <a mat-button (click)="displayDescription('get')" [routerLink]="'/get'" routerLinkActive="active"> GET </a>
+        <a mat-button (click)="displayDescription('post')" [routerLink]="'/post'" routerLinkActive="active"> POST </a>
+        <a mat-button (click)="displayDescription('put')" [routerLink]="'/put'" routerLinkActive="active"> PUT </a>
+        <a mat-button (click)="displayDescription('delete')" [routerLink]="'/delete'" routerLinkActive="active"> DELETE </a>  
+      </div> 
     </mat-toolbar-row>
-  
-    <mat-toolbar-row>
+      <mat-toolbar-row *ngIf="!mobileQuery.matches ? 56 : 0" >
         <span style="font-size: 15px;margin-left: 30px;">{{headerData}}</span>
       </mat-toolbar-row>
-  </mat-toolbar>
-<mat-sidenav-container>
-    <mat-sidenav #sidenav>
-      <mat-nav-list>
+    </mat-toolbar>
   
-        <a mat-button [routerLink]="'/get'"> GET </a>
-        <a mat-button > POST </a>
-        <a mat-button > PUT </a>
-        <a mat-button > DELETE </a>    
-        <!-- <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close</a> -->
+    <mat-sidenav-container 
+                          class="example-sidenav-container"
+                           [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+      <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+        <mat-nav-list>
+            <a mat-list-item [routerLink]="'/get'"> GET </a>
+            <a mat-list-item [routerLink]="'/post'"> POST </a>
+            <a mat-list-item [routerLink]="'/put'"> PUT </a>
+            <a mat-list-item [routerLink]="'/delete'"> DELETE </a> 
+
+        </mat-nav-list>
+      </mat-sidenav>
   
-      </mat-nav-list>
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <div style="height: 88vh;">
-  
+      <mat-sidenav-content>
         <router-outlet></router-outlet>
-      </div>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
+      </mat-sidenav-content>
+    </mat-sidenav-container>
+
+  </div>
+
