--- a/src/app/get/get.component.html
+++ b/src/app/get/get.component.html
@@ -1,8 +1,20 @@
 <json-editor  [options]="editorOptions" [data]="data"></json-editor>
-<div class="example-button-row">
-<button mat-raised-button color="primary" style="float: right;margin-right: 20px;margin-top:20px;width: 250px;" (click)="submit()" [disabled]="!isJsonValid">Upload</button>
-</div>
 
-<div *ngIf="generatedUrl">
-    <a href="{{generatedUrl}}" target="_blank">{{generatedUrl}}</a>
-  </div>
+
+
+  
+        <div class="example-button-row">
+            
+            <button mat-raised-button color="primary" style="float: right;margin-right: 20px;margin-top:20px;width: 250px;" (click)="submit()" [disabled]="!isJsonValid">{{buttonText}}</button>
+    
+            <mat-form-field  *ngIf="generatedUrl" class="example-full-width" appearance="fill" style="margin-top:12px;width: 800px;margin-left: 100px;">
+                <mat-label >Generated URL</mat-label>
+                <input matInput readonly  [(ngModel)]="generatedUrl">
+                <button  matSuffix mat-icon-button aria-label="Clear" >
+                    <mat-icon [cdkCopyToClipboard]="generatedUrl">content_cut</mat-icon>
+                  </button>
+              </mat-form-field>
+        </div>
+
+
+    
