--- a/src/app/get/get.component.html
+++ b/src/app/get/get.component.html
@@ -6,8 +6,7 @@
         <div class="example-button-row">
             
             <button mat-raised-button color="primary" style="float: right;margin-right: 20px;margin-top:20px;width: 250px;" (click)="submit()" [disabled]="!isJsonValid">{{buttonText}}</button>
-    
-            <mat-form-field  *ngIf="generatedUrl" class="example-full-width" appearance="fill" style="margin-top:12px;width: 800px;margin-left: 100px;">
+            <mat-form-field *ngIf="generatedUrl"  class="custom_textbox example-full-width " appearance="fill" >
                 <mat-label >Generated URL</mat-label>
                 <input matInput readonly  [(ngModel)]="generatedUrl">
                 <button  matSuffix mat-icon-button aria-label="Clear" >
@@ -17,4 +16,6 @@
         </div>
 
 
+
+        
     
