--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,10 +29,10 @@
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
         <mat-nav-list>
-            <a mat-list-item [routerLink]="'/get'"> GET </a>
-            <a mat-list-item [routerLink]="'/post'"> POST </a>
-            <a mat-list-item [routerLink]="'/put'"> PUT </a>
-            <a mat-list-item [routerLink]="'/delete'"> DELETE </a> 
+            <a mat-list-item (click)="displayDescription('get')" [routerLink]="'/get'" routerLinkActive="active"> GET </a>
+            <a mat-list-item (click)="displayDescription('post')" [routerLink]="'/post'" routerLinkActive="active"> POST </a>
+            <a mat-list-item (click)="displayDescription('put')" [routerLink]="'/put'" routerLinkActive="active"> PUT </a>
+            <a mat-list-item (click)="displayDescription('delete')" [routerLink]="'/delete'" routerLinkActive="active"> DELETE </a> 
 
         </mat-nav-list>
       </mat-sidenav>
