adding is feature enabled flags

--- a/src/app/delete/delete.component.html
+++ b/src/app/delete/delete.component.html
@@ -1,2 +1,2 @@
 
-    <h1 class="coming-soon-h1 coming-soon">Coming Soon</h1>
+<h1 *ngIf="!isEnabled" class="coming-soon-h1 coming-soon">Coming Soon</h1>
