post multiple json editor and ui changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,13 +13,11 @@
         <a mat-button (click)="displayDescription('delete')" [routerLink]="'/delete'" routerLinkActive="active"> DELETE </a>  
       </div> 
     </mat-toolbar-row>
-      <mat-toolbar-row *ngIf="!mobileQuery.matches ? 56 : 0" >
-        <span style="font-size: 15px;margin-left: 30px;">{{headerData}}</span>
+      <mat-toolbar-row  >
+        <span class="headerData">{{headerData}}</span>
       </mat-toolbar-row>
 
-      <mat-toolbar-row *ngIf="mobileQuery.matches ? 56 : 0" >
-        <span style="font-size: 11px;margin-left: 2px;">{{headerData}}</span>
-      </mat-toolbar-row>
+    
 
     </mat-toolbar>
   
