--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <span><img src="../assets/images/logo-white.png"  style="width:130px;margin-top:8px"/></span>
      <span class="menu-spacer"></span>
       <div *ngIf="!mobileQuery.matches ? 56 : 0" style="margin-left: 35px;">
+        <a mat-button (click)="displayDescription('home')" [routerLink]="'/home'" routerLinkActive="active"> Home </a>
         <a mat-button (click)="displayDescription('get')" [routerLink]="'/get'" routerLinkActive="active"> GET </a>
         <a mat-button (click)="displayDescription('post')" [routerLink]="'/post'" routerLinkActive="active"> POST </a>
         <a mat-button (click)="displayDescription('put')" [routerLink]="'/put'" routerLinkActive="active"> PUT </a>
@@ -27,6 +28,7 @@
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
         <mat-nav-list>
+            <a mat-list-item (click)="displayDescription('home')" [routerLink]="'/home'" routerLinkActive="active"> Home </a>
             <a mat-list-item (click)="displayDescription('get')" [routerLink]="'/get'" routerLinkActive="active"> GET </a>
             <a mat-list-item (click)="displayDescription('post')" [routerLink]="'/post'" routerLinkActive="active"> POST </a>
             <a mat-list-item (click)="displayDescription('put')" [routerLink]="'/put'" routerLinkActive="active"> PUT </a>
