--- a/src/styles.css
+++ b/src/styles.css
@@ -188,3 +188,23 @@ div.jsoneditor-value.jsoneditor-null {
 div.jsoneditor-value.jsoneditor-invalid {
   color: white;
 } */
+
+.custom_textbox{
+    margin-top:12px !important;
+    width: 800px !important;
+    margin-left: 100px !important;
+}
+
+@media only screen and (max-width: 600px) {
+    .custom_textbox{
+        margin-top:12px !important;
+        width: 397px !important;
+        margin-left: 2px !important;
+    }
+  }
+
+  /* html * {
+    font-family: 'Josefin Slab', serif;
+     font-style: inherit;
+     font-weight: bold; 
+  } */
