--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
 </div> -->
 
 
-  <h1 *ngIf="!isEnabled" class="coming-soon-h1 coming-soon">Coming Soon</h1> 
+  <!-- <h1 *ngIf="!isEnabled" class="coming-soon-h1 coming-soon">Coming Soon</h1>  -->
 
 <!-- <div *ngIf="!isEnabled">
   Home Screen
